fixed spacings

--- a/intelliChord/style.css
+++ b/intelliChord/style.css
@@ -9,6 +9,7 @@
 * {
   box-sizing: border-box;
   text-decoration: none;
+  letter-spacing: 0.05px;
 }
 
 body {
@@ -656,7 +657,7 @@ small {
   justify-content: center;
   text-align: center;
   margin-top: 30px;
-  width: 100%;
+  width: 100vw;
 }
 
 .progression-select-container {
@@ -675,7 +676,7 @@ small {
 .keyNote {
   font-size: 25px;
   font-weight: 700;
-  margin: 0 12px;
+  margin: 0 10px;
   position: relative;
 }
 
